# bpl

./: .~lock.project.odt#  CMakeLists.txt  CmakeLists.txt  README.md  calc.bpl  func.bpl  hello.bpl  project.odt  targets.md  test.bpl  vaiable.bpl
examples/: func.bpl  hello.bpl
include/: stack.h  type.h  utils.h
include/interpreter/: interpreter.h  parser.h  processor.h
include/variables/: stack.h  type.h
src/: bpl.cpp  ngl.cpp  stack.cpp  utils.cpp
src/interpreter/: interpreter.cpp  parser.cpp  processor.cpp
src/variables/: stack.cpp  type.cpp
tests/: CMakeLists.txt
tests/processor/: processor_tests.cpp
tests/stack/: stackTest.cpp
tests/variables/: typesTest.cpp
